~Picture overflow (border-radius) fix

--- a/react/src/Components/Picture.module.scss
+++ b/react/src/Components/Picture.module.scss
@@ -1,6 +1,7 @@
 .container {
   position: relative;
   display: flex;
+  overflow: hidden;
 }
 
 .image {
